add contact info

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <title>Cédric Chartron</title>
 
   <link rel="stylesheet" href="main.css">
+  <script src="main.js"></script>
 </head>
 
 <body>
@@ -20,11 +21,11 @@
     <p>and this is my website.</p>
 
     <p id="presentation">
-      I am a professional programmer; my domains are Web development, artificial intelligence, game development
+      I am a professional developer; my domains are Web development, artificial intelligence, game development
       and data science. My other hobbies include drawing, photography, electronic music and video games.
     </p>
 
-    <p>Here, you can view some of my programming projects:</p>
+    <p>Here, you can take a look at some of my personal programming projects:</p>
 
     <div id="projects">
       <a class="project" href="/cellular/">
@@ -67,7 +68,7 @@
 
     <div class="clear-both"></div>
 
-    <p>You can also find more on my <a href="https://github.com/tuzepoito">GitHub page</a>.</p>
+    <p>You can also find more information on my <a href="https://github.com/tuzepoito">GitHub page</a>.</p>
 
   </div>
 
