--- a/index.html
+++ b/index.html
@@ -28,37 +28,37 @@
     <p>Here, you can take a look at some of my personal programming projects:</p>
 
     <div id="projects">
-      <a class="project" href="/cellular/">
+      <a class="project" href="/cellular-automata/">
         <div class="img-container">
           <img src="cellular.png" alt="Cellular automata" />
         </div>
         Cellular Automata
       </a>
-      <a class="project" href="/perceptron/">
+      <a class="project" href="/Perceptron-JS/">
         <div class="img-container">
           <img src="perceptron.png" alt="Perceptron" />
         </div>
         Perceptron
       </a>
-      <a class="project" href="/neurons/">
+      <!-- <a class="project" href="/neurons/">
         <div class="img-container">
           <img src="neurons.png" alt="Neural Network" />
         </div>
         Neural Network
-      </a>
-      <a class="project" href="/maze/">
+      </a> -->
+      <a class="project" href="/maze-generation/">
         <div class="img-container">
           <img src="maze.png" alt="Maze Generation" />
         </div>
         Maze Generation
       </a>
-      <a class="project" href="/raycaster/">
+      <!-- <a class="project" href="/raycaster/">
         <div class="img-container">
           <img src="raycaster.png" alt="Ray-caster" />
         </div>
         Ray-casting Algorithm
-      </a>
-      <a class="project" href="/bml/">
+      </a> -->
+      <a class="project" href="/BihamMiddletonLevine-JS/">
         <div class="img-container">
           <img src="bml.png" alt="Biham-Middleton-Levine" />
         </div>
