--- a/index.html
+++ b/index.html
@@ -40,24 +40,24 @@
         </div>
         Perceptron
       </a>
-      <!-- <a class="project" href="/neurons/">
+      <a class="project" href="/NeuralNetwork-JS/">
         <div class="img-container">
           <img src="neurons.png" alt="Neural Network" />
         </div>
         Neural Network
-      </a> -->
+      </a>
       <a class="project" href="/maze-generation/">
         <div class="img-container">
           <img src="maze.png" alt="Maze Generation" />
         </div>
         Maze Generation
       </a>
-      <!-- <a class="project" href="/raycaster/">
+      <a class="project" href="/RayCaster-JS/">
         <div class="img-container">
           <img src="raycaster.png" alt="Ray-caster" />
         </div>
         Ray-casting Algorithm
-      </a> -->
+      </a>
       <a class="project" href="/BihamMiddletonLevine-JS/">
         <div class="img-container">
           <img src="bml.png" alt="Biham-Middleton-Levine" />
