update contact info

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <title>Cédric Chartron</title>
 
   <link rel="stylesheet" href="main.css">
+  <link rel="stylesheet" href="fonts.css">
   <script src="main.js"></script>
 </head>
 
@@ -68,7 +69,16 @@
 
     <div class="clear-both"></div>
 
-    <p>You can also find more information on my <a href="https://github.com/tuzepoito">GitHub page</a>.</p>
+    <p>
+      I am also the author of <a href="https://this-gan-page-does-not-exist.herokuapp.com/">"This GAN Page Does Not
+      Exist"</a>, a parody website about Artificial Intelligence.
+    </p>
+
+    <p>Contact:</p>
+    <ul id="contact">
+      <li><a class="icon-github" title="GitHub" href="https://github.com/tuzepoito">GitHub</a></li>
+      <li><a class="icon-twitter" title="Twitter" href="https://twitter.com/kilehi1er">Twitter</a></li>
+    </ul>
 
   </div>
 
