--- a/projects.html
+++ b/projects.html
@@ -55,6 +55,14 @@ Here you can take a look at some of my personal programming projects:
             Biham-Middleton-Levine Traffic Model
         </a>
     </li>
+    <li>
+        <a href="https://github.com/tuzepoito/QuadriMan">
+            <div class="img-container">
+                <img src="/assets/images/quadriman.png" alt="QuadriMan - A four-dimensional game">
+            </div>
+            QuadrMan (4D game)
+        </a>
+    </li>
 </ul>
 
 <div style="clear: both;"></div>
