--- a/projects.html
+++ b/projects.html
@@ -60,7 +60,7 @@ Here you can take a look at some of my personal programming projects:
             <div class="img-container">
                 <img src="/assets/images/quadriman.png" alt="QuadriMan - A four-dimensional game">
             </div>
-            QuadrMan (4D game)
+            QuadriMan (4D game)
         </a>
     </li>
 </ul>
